# toy-wgpu-lighting

./: .gitignore  Cargo.toml  README.md  index.html
res/: cube-black.mtl  cube-white.mtl  queen-black.mtl  queen-white.mtl
src/: lib.rs  main.rs
src/app/: base_buffer.wgsl  base_camera.wgsl  base_shader.wgsl  camera.rs  colored_vertex.wgsl  mod.rs  model.wgsl  model_instanced.wgsl  model_vertex.wgsl  render.rs  resources.rs  util.rs  utils.rs
src/app/render/: mod.rs  model.rs  texture.rs
