[package]
name = "toy_renderer"
version = "0.1.0"
edition = "2021"

[lib]
name = "toy_renderer_wasm"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "toy_renderer"

[dependencies]
cfg-if = "1"
winit = "0.27"
env_logger = "0.9"
log = "0.4"
wgpu = "0.14"
pollster = "0.2"
glam = "0.22.0"
bytemuck = { version = "1.4", features = [ "derive" ] }
chrono = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
wgpu = { version = "0.14", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
